# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: rust.yml
day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
day08/: Cargo.toml
day08/src/: lib.rs
day09/: Cargo.toml
day09/src/: lib.rs
day10/: Cargo.toml
day10/src/: lib.rs
