[workspace]
resolver = "2"
members = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08"]

[workspace.package]
authors = ["David Oberacker <developer@oberacker.me>"]
edition = "2021"
description = "Solution for this days Advent of Code exercise"
publish = false

[profile.release]
incremental = true
debug = true
lto = "fat"

