[package]
name = "day01"
version = "0.3.0"
edition.workspace = true
description.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01_part1"

[[bin]]
name = "day01_part2"

[dependencies]