[package]
name = "day02"
version = "0.2.1"
edition.workspace = true
description.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day02_part1"

[[bin]]
name = "day02_part2"

[dependencies]
regex.workspace = true
