[package]
name = "day03"
version = "0.1.1"
edition.workspace = true
description.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day03_part1"

[[bin]]
name = "day03_part2"

[dependencies]