[package]
name = "day05"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true

[lib]
name = "day05"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day05_part1"

[[bin]]
name = "day05_part2"

[dependencies]
regex.workspace = true
rayon.workspace = true
ranges.workspace = true
itertools.workspace = true