[package]
name = "day08"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day08"
path = "src/lib.rs"

[[bin]]
name = "day08_part1"

[[bin]]
name = "day08_part2"

[dependencies]
regex.workspace = true
anyhow.workspace = true
rayon.workspace = true
num.workspace = true