[package]
name = "day09"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day09"
path = "src/lib.rs"

[[bin]]
name = "day09_part1"

[[bin]]
name = "day09_part2"

[dependencies]
anyhow.workspace = true