[package]
name = "day10"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day10"
path = "src/lib.rs"

[[bin]]
name = "day10_part1"

[[bin]]
name = "day10_part2"

[dependencies]
ndarray.workspace = true
anyhow.workspace = true